Setting up sitter & employee pages

--- a/admin/sitters.html
+++ b/admin/sitters.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="au theme template">
 
     <!-- Title Page-->
-    <title>J B C - Customers</title>
+    <title>J B C - Sitters</title>
 
     <!-- Fontfaces CSS-->
     <link href="css/font-face.css" rel="stylesheet" media="all">
